# Qt-Client-Server

Client/: CMakeLists.txt  Client.pro  client_icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Server/: CMakeLists.txt  Server.pro  main.cpp  server.cpp  server.h  server_icon.rc
